third_party/rust/anyhow/tests/ui/no-impl.stderr
error[E0599]: no method named `anyhow_kind` found for reference `&Error` in the current scope
 --> $DIR/no-impl.rs:7:13
  |
4 | struct Error;
  | -------------
  | |
  | doesn't satisfy `Error: anyhow::kind::TraitKind`
  | doesn't satisfy `Error: std::convert::Into<anyhow::Error>`
  | doesn't satisfy `Error: std::fmt::Display`
...
7 |     let _ = anyhow!(Error);
  |             ^^^^^^^^^^^^^^ method not found in `&Error`
  |
  = note: the method `anyhow_kind` exists but the following trait bounds were not satisfied:
          `Error: std::convert::Into<anyhow::Error>`
          which is required by `Error: anyhow::kind::TraitKind`
          `Error: std::fmt::Display`
          which is required by `&Error: anyhow::kind::AdhocKind`
          `&Error: std::convert::Into<anyhow::Error>`
          which is required by `&Error: anyhow::kind::TraitKind`
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
